--- a/haskell-examples.cabal
+++ b/haskell-examples.cabal
@@ -4,7 +4,7 @@
 name:                haskell-examples
 version:             0.1.0.0
 synopsis:            Haskell examples.
--- description:
+ description:        Code snippets used for blogging too.
 license:             PublicDomain
 license-file:        LICENSE
 author:              danfran
@@ -22,7 +22,6 @@ Executable XkcdDownloader
           , http-conduit
           , aeson
           , text
-          , bytestring
           , network-uri
           , HTTP
           , mtl
@@ -32,6 +31,19 @@ Executable XkcdDownloader
           , transformers-base
           , reactive-banana ==1.0.0.0
   hs-source-dirs:   src/XkcdDownloader
+  default-language: Haskell2010
+  ghc-options:      -Wall -O2
+  main-is:          Main.hs
+
+Executable TwitterTrends
+  build-depends:
+          base
+          , authenticate-oauth
+          , http-conduit
+          , aeson
+          , text
+          , bytestring
+  hs-source-dirs:   src/TwitterTrends
   default-language: Haskell2010
   ghc-options:      -Wall -O2
   main-is:          Main.hs
