--- a/haskell-examples.cabal
+++ b/haskell-examples.cabal
@@ -4,7 +4,7 @@
 name:                haskell-examples
 version:             0.1.0.0
 synopsis:            Haskell examples.
- description:        Code snippets used for blogging too.
+description:         Code snippets used for blogging too.
 license:             PublicDomain
 license-file:        LICENSE
 author:              danfran
@@ -44,6 +44,17 @@ Executable TwitterTrends
           , text
           , bytestring
   hs-source-dirs:   src/TwitterTrends
+  default-language: Haskell2010
+  ghc-options:      -Wall -O2
+  main-is:          Main.hs
+
+Executable Hangman
+  build-depends:
+          base
+          , random
+          , mtl
+          , containers
+  hs-source-dirs:   src/Hangman
   default-language: Haskell2010
   ghc-options:      -Wall -O2
   main-is:          Main.hs
