--- a/haskell-examples.cabal
+++ b/haskell-examples.cabal
@@ -29,7 +29,7 @@ Executable XkcdDownloader
           , old-locale
           , random
           , transformers-base
-          , reactive-banana ==1.0.0.0
+          , reactive-banana ==1.1.0.1
   hs-source-dirs:   src/XkcdDownloader
   default-language: Haskell2010
   ghc-options:      -Wall -O2
@@ -50,7 +50,7 @@ Executable TwitterTrends
 
 Executable Hangman
   build-depends:
-          base
+          base >= 4.7 && < 5
           , random
           , mtl
           , containers
