--- a/haskell-examples.cabal
+++ b/haskell-examples.cabal
@@ -58,3 +58,11 @@ Executable Hangman
   default-language: Haskell2010
   ghc-options:      -Wall -O2
   main-is:          Main.hs
+
+Executable Arrows
+  build-depends:
+          base
+  hs-source-dirs:   src/Arrows
+  default-language: Haskell2010
+  ghc-options:      -Wall -O2
+  main-is:          Main.hs
